@@ -8,39 +8,29 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
-import java.util.List;
-
 @Configuration
 public class CorsConfig {
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        
-        // Allow requests from frontend origins
-        config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000",      // React default port
-                "http://localhost:5173",      // Vite default port
-                "http://localhost:5174",      // Vite alternate port
-                "https://task-manager-backend-0qvl.onrender.com" // Your backend (for testing)
-                // Add your deployed frontend URL here when you deploy
-                // "https://your-app.vercel.app",
-                // "https://your-app.netlify.app"
+
+        config.setAllowedOrigins(List.of(
+            "http://localhost:5173",
+            "https://task-manager-frontend.onrender.com" // adjust if needed
         ));
-        
-        // Allow all HTTP methods
-        config.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+
+        config.setAllowedMethods(List.of(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS"
         ));
-        
-        // Allow all headers
-        config.setAllowedHeaders(Arrays.asList("*"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(false);
+
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-        
+
         return source;
     }
 }
